--- a/assets/src/sass/9-backend/_backend.scss
+++ b/assets/src/sass/9-backend/_backend.scss
@@ -215,7 +215,7 @@
       justify-content: center;
       .spinner-material {
         height: 10px;
-        width: 20px;
+        width: 10px;
         display: none;
         margin-left: 0.5rem;
       }
@@ -283,12 +283,53 @@
         &__body {
           padding: 1rem;
           .form-group {
+            &:nth-child(2) {
+              display: none;
+            }
+            & > input {
+              &:not([type="checkbox"]):not([type="radio"]) {
+                width: 100%;
+              }
+            }
+            .awesomplete {
+              & > input {
+                &[type=text] {
+                  width: 100%;
+                }
+              }
+              ul[role="listbox"] {
+                cursor: pointer;
+                padding: 5px 10px;
+                border-radius: 5px;
+                border: 1px solid #ddd;
+                box-shadow: 1px 1px 10px #cdcdcd inset, 1px 1px 10px #8d8d8d;
+                li {
+                  border: none;
+                  transition: background .3s ease;
+                  &:hover {
+                    background: #eee;
+                  }
+                  &:not(:last-child) {
+                    border-bottom: 1px solid #ddd;
+                  }
+                }
+              }
+            }
             label.form-label {
               font-size: 14px;
               line-height: 25px;
               margin-bottom: auto;
               padding-bottom: unset;
               text-transform: inherit;
+              .tippy {
+                &__help {
+                  font-size: 10px;
+                  margin-left: 5px;
+                  padding: 2px 7px;
+                  background: #ddd;
+                  border-radius: 20px;
+                }
+              }
             }
             .single-repeater-option {
               margin: auto;
@@ -311,9 +352,20 @@
               //   position: absolute;
               //   align-items: center;
               // }
-              .input-group-text .dashicons-before {
+              .input-group {
+                gap: 5px;
+                width: 100%;
                 display: flex;
                 align-items: center;
+                .form-control {
+                  width: inherit;
+                }
+              }
+              .input-group-text {
+                .dashicons-before {
+                  display: flex;
+                  align-items: center;
+                }
               }
               &.single-repeater-group {
                 padding: unset;
@@ -351,7 +403,22 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      .w-half {width: 48%;}
+      .w-half {
+        width: 48%;
+        height: 40px;
+        display: flex;
+        display: none;
+        margin-top: 10px;
+        align-items: center;
+        justify-content: center;
+        &:nth-child(2) {
+          width: 100%;
+          display: block;
+        }
+      }
+      .imgpreview {
+        display: none;
+      }
     }
   }
   &.d-none {display: none;}
