--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -28,5 +28,6 @@
 @import "8-frontend/frontend";
 
 // @import "../library/css/icons.css";
-@import "toastify-js/src/toastify.css";
-@import "flatpickr/dist/flatpickr.min.css";
+@import "~toastify-js/src/toastify.css";
+@import "~flatpickr/dist/flatpickr.min.css";
+@import "~slim-select/dist/slimselect.css";
