--- a/assets/src/sass/8-frontend/_frontend.scss
+++ b/assets/src/sass/8-frontend/_frontend.scss
@@ -206,6 +206,29 @@ $frameWidth: 500px;
         flex-direction: column;
         justify-content: center;
       }
+      &__error {
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        min-height: 400px;
+        background-size: 90%;
+        background-repeat: no-repeat;
+        background-origin: content-box;
+        background-position: center center;
+        box-shadow: inset 0 0 0 2000px rgb(233 233 233 / 10%);
+        &__title {
+          top: 50%;
+          left: 50%;
+          display: block;
+          position: relative;
+          transform: translate(-50%, -50%);
+          text-shadow: 1px 1px 2px #ddd;
+        }
+        > img {
+          width: 100%;
+          height: 100%;
+        }
+      }
   
       & > img {
         height: auto;
@@ -2210,6 +2233,9 @@ $frameWidth: 500px;
         border-radius: 5px;
         position: relative;
         border: 1px solid #ddd;
+        &:hover {
+          color: $primaryColor;
+        }
       }
     }
   }
