--- a/assets/src/sass/9-backend/_backend.scss
+++ b/assets/src/sass/9-backend/_backend.scss
@@ -860,8 +860,73 @@
       &.visible {
         display: flex;
       }
+      .h4 {
+        padding: 10px;
+        font-size: 14px;
+        margin-bottom: 0px;
+        text-align: justify;
+      }
     }
-    &__form {}
+    &__actions {
+      gap: 10px;
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    &__form {
+      margin-top: 20px;
+    }
+  }
+
+  .preloader {
+    display: none;
+  }
+  &[data-loading] {
+    .preloader {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      position: absolute;
+      align-items: center;
+      justify-content: center;
+      background-color: #fff;
+      .loader {
+        width: 50px;
+        height: 50px;
+        position: relative;
+        border-radius: 50%;
+        border: 4px solid #ccc;
+        border-top-color: #000;
+        animation: spin 1s infinite linear;
+        .counter {
+          top: 50%;
+          left: 50%;
+          width: 100%;
+          font-size: 12px;
+          font-weight: bold;
+          line-height: 12px;
+          position: absolute;
+          transform: translate(-50%, -50%);
+          // .svg_icon {
+          //   svg {
+          //     display: none;
+          //   }
+          // }
+          
+        }
+      }
+    }
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 .swal2-html-container {
